fix: fix general display on desktop if text too long, fix mobile display and show pictures

--- a/client/app/assets/scss/views/_welcome-page.scss
+++ b/client/app/assets/scss/views/_welcome-page.scss
@@ -85,7 +85,7 @@
               left: 10%;
             }
             &.c {
-              background-image:url('../../assets/pictures/welcome/tech/c.jpg');
+              background-image:url('../../assets/pictures/welcome/tech/C.jpg');
               bottom: 0%;
               right: 0%;
             }
